--- a/src/main/docker/Dockerfile.multistage
+++ b/src/main/docker/Dockerfile.multistage
@@ -1,6 +1,5 @@
 ## Stage 1 : build with maven builder image with native capabilities
-FROM quay.io/quarkus/ubi-quarkus-graalvmce-builder-image:22.3-java11 AS build
-#FROM quay.io/quarkus/ubi-quarkus-mandrel-builder-image:22.3-java17 AS build
+FROM quay.io/quarkus/ubi-quarkus-mandrel-builder-image:jdk-21 AS build
 COPY --chown=quarkus:quarkus mvnw /code/mvnw
 COPY --chown=quarkus:quarkus .mvn /code/.mvn
 COPY --chown=quarkus:quarkus pom.xml /code/
@@ -8,7 +7,7 @@ USER quarkus
 WORKDIR /code
 RUN ./mvnw -B org.apache.maven.plugins:maven-dependency-plugin:3.1.2:go-offline
 COPY src /code/src
-RUN ./mvnw package -Pnative
+RUN ./mvnw package -Dnative
 
 ## Stage 2 : create the docker final image
 #FROM quay.io/quarkus/quarkus-micro-image:2.0
@@ -23,7 +22,7 @@ RUN ./mvnw package -Pnative
 
 #EXPOSE 8080
 #USER 1001
-
+  
 #CMD ["./application", "-Dquarkus.http.host=0.0.0.0"]
 
 ## Stage 2 : distroless
