--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
+quarkus.devservices.enabled=false
+
 quarkus.datasource.db-kind=other
 quarkus.datasource.jdbc.url=jdbc:cloudspanner:/projects/${PROJECT_ID}/instances/noog/databases/noogl
 quarkus.datasource.jdbc.driver=com.google.cloud.spanner.jdbc.JdbcDriver
-quarkus.hibernate-orm.dialect=com.google.cloud.spanner.hibernate.SpannerDialect
+#quarkus.hibernate-orm.dialect=com.google.cloud.spanner.hibernate.SpannerDialect
+quarkus.hibernate-orm.dialect=org.hibernate.dialect.SpannerDialect
+
 quarkus.hibernate-orm.database.generation=none
+#quarkus.hibernate-orm.log.sql=true
